@@ -5,16 +5,12 @@ import static edu.uw.tcss.view.app.assets.AssetsManager.IMAGES_PATH;
 import edu.uw.tcss.view.app.assets.AssetsManager;
 import edu.uw.tcss.view.util.ColorSchemeManager;
 import edu.uw.tcss.view.util.GraphicsHandler;
-
-import java.awt.*;
-import java.awt.event.MouseAdapter;
-import java.awt.event.MouseEvent;
-import java.awt.event.MouseListener;
-import java.awt.event.MouseMotionListener;
+import java.awt.Color;
+import java.awt.Dimension;
+import java.awt.Graphics;
+import java.awt.Graphics2D;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.logging.Level;
@@ -52,24 +48,34 @@ public class AdBannerPanel extends JPanel {
         } catch (final IOException e) {
             Logger.getAnonymousLogger().log(Level.WARNING, "File not found", e.getStackTrace());
         }
-        setPreferredSize(new Dimension(BANNER_WIDTH, BANNER_HEIGHT));
-        setBackground(Color.MAGENTA);
-        setOpaque(true);
+        setStyle();
         instance = this;
 
         final Timer timer = new Timer(5000, theEvent -> changeAdvertisement());
         timer.start();
 
         myCurrentAdvertisement = myAdvertisements.getFirst();
-
-        addListeners();
-
         repaint();
     }
+
+    private void setStyle() {
+        setPreferredSize(new Dimension(BANNER_WIDTH, BANNER_HEIGHT));
+        setBackground(Color.MAGENTA);
+        setOpaque(true);
+    }
+
+    /**
+     * just gets instance.
+     * @return gives instance.
+     */
     public static AdBannerPanel getInstance() {
         return instance;
     }
 
+    /**
+     * loads advertisements.
+     * @throws IOException ensures unloadable images don't cause trouble.
+     */
     public void loadAdvertisements() throws IOException {
         myAdvertisements.clear();
         myAdvertisementIndex = 0;
@@ -77,53 +83,24 @@ public class AdBannerPanel extends JPanel {
         // 🎀✨ add the special ads
         if (ColorSchemeManager.getCurrentColorScheme().
                 name().contains("Pink Mode \uD83C\uDF80✨")) {
-
-            //myAdvertisements.add(ImageIO.read(AssetsManager.getFile(IMAGES_PATH,
-            //        "Cool_Girls_Code_Banner.png")));
             myAdvertisements.add(ImageIO.read(AssetsManager.getFile(IMAGES_PATH,
                     "cute ad.png")));
             myAdvertisements.add(ImageIO.read(AssetsManager.getFile(IMAGES_PATH,
                     "CoolGirlsCode.png")));
         } else {
-
-            myAdvertisements.add(ImageIO.read(AssetsManager.getFile(IMAGES_PATH,
-                    "CoolGirlsCode.png")));
             myAdvertisements.add(ImageIO.read(AssetsManager.getFile(IMAGES_PATH,
                     "adBanner.jpg")));
             myAdvertisements.add(ImageIO.read(AssetsManager.getFile(IMAGES_PATH,
                     "SampleAdvertisement.png")));
             myAdvertisements.add(ImageIO.read(AssetsManager.getFile(IMAGES_PATH,
-                    "cute ad.png")));
-            myAdvertisements.add(ImageIO.read(AssetsManager.getFile(IMAGES_PATH,
                     "adBanner2.jpeg")));
-            myAdvertisements.add(ImageIO.read(AssetsManager.getFile(IMAGES_PATH,
-                    "Cool_Girls_Code_Banner.png")));
             myAdvertisements.add(ImageIO.read(AssetsManager.getFile(IMAGES_PATH,
                     "adBanner3.jpg")));
             myAdvertisements.add(ImageIO.read(AssetsManager.getFile(IMAGES_PATH,
                     "dairyQueenAd.png")));
         }
-        if (!myAdvertisements.isEmpty()) {
-            myCurrentAdvertisement = myAdvertisements.get(0);
-        }
+        myCurrentAdvertisement = myAdvertisements.getFirst();
         repaint();
-    }
-
-    private void addListeners() {
-        addMouseListener(new MouseAdapter() {
-            public void mouseClicked(final MouseEvent theEvent) {
-                try {
-                    openWebpage();
-                } catch (final URISyntaxException | IOException exception) {
-                    throw new RuntimeException(exception);
-                }
-            }
-        });
-    }
-
-    private void openWebpage() throws URISyntaxException, IOException {
-        Desktop.getDesktop().browse(new URI("https://this-page-intentionally-left-blank.org/"));
-
     }
 
     private void changeAdvertisement() {
